# stem_agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  evaluation_summary.md  langgraph.json  pyproject.toml
docs/: agent_evaluation_pipeline.md  architecture.md  oop_vs_functional_assessment.md
evals/: create_dataset.py  evaluators.py  run_baseline_eval.py  run_eval.py
src/: architecture.md
src/skills/: README.md
src/stem_agent/: __init__.py  configuration.py  graph.py  prompts.py  skills.py  state.py  tools.py
src/stem_agent/nodes/: __init__.py  adapt.py  call_tool.py  execute.py  load_skills.py  perceive.py  plan.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py  test_safeguards.py  test_skills.py  test_tools.py
visual/: visualize_graph.py
